# xml-exporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
references/pigu/: Documentation for products without sizes.docx  Documentation for stock and prices XML (seller is not using discount mechanism).docx  Documentation for stock and prices XML (seller using discount mechanism).docx  Schema.xsd
src/: database.rs  main.rs  models.rs  write.rs
src/pigu/: database.rs  mod.rs  models.rs  write.rs
src/pigu/database/: remainders.rs  root.rs
src/pigu/models/: mod.rs  remainders.rs  root.rs
src/pigu/write/: remainders.rs  root.rs
src/shopzone/: database.rs  models.rs  write.rs
src/varle/: database.rs  mod.rs  models.rs  write.rs
